--- a/.github/workflows/run_daily.yml
+++ b/.github/workflows/run_daily.yml
@@ -8,6 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Cache Playwright Browsers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -35,6 +40,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Install Playwright Browsers
+        run: python -m playwright install --with-deps
       - name: Install tesseract
         run: |
           sudo apt update
